--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "@babel/core": "~7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
-    "@types/react-native": "~0.63.2",
-    "typescript": "~4.0.0"
+    "@types/react-native": "~0.63.2"
   },
   "private": true
 }
